--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>b</b></title>
+    <title>ホーム</title>
 </head>
 <body>
-    <h1>めんどくさいこと管理メニュー</h1>
-    <form action="branch.php">
-    <button type="submit" name="select">一覧</button>   
-    <button type="submit" name="insert">登録</button>
-    <button type="submit" name="update">更新</button>
-    <button type="submit" name="delete">削除</button> 
-    </form>
+    <h1>めんどくさいこと一覧表示システム</h1>
+    <input type="button" onclick="location.href='./list.php'" value="一覧">
+    <input type="button" onclick="location.href='./registration.php'" value="登録">
+    <input type="button" onclick="location.href='./update.php'" value="更新">
+    <input type="button" onclick="location.href='./delete.php'" value="削除">
 </body>
 </html>
